--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,9 @@
 		</article>
 		{% include footer.html %}
 	</main>
-	<script src="{{ '/js/base.js' }}"></script>
+	<script src="{{ '/js/base.js' | prepend: site.baseurl}}"></script>
 	<!--<link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl | prepend: site.url }}">-->
-
 </body>
 
 </html>
