--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <aside id="nav-container">
-	<img id="img-logo" src="{{ site.logourl }}"/>
+	<img id="img-logo" src="{{ site.logourl | prepend: site.baseurl}}"/>
 	<div class="container">
 		<span id="nav-span"></span>
 		<div id="social-media-container">
