--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,7 +14,7 @@
 	<meta name="theme-color" content="#ffffff"> 
 
 	<!-- Scripts -->
-	<script src="{{ '/js/jquery-3.1.1.min.js' }}"></script>
+	<script src="{{ '/js/jquery-3.1.1.min.js' | prepend: site.baseurl }}"></script>
 
 	<!-- Style Sheets and Fonts -->
 	<link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
