--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,11 +6,11 @@
 	<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
 	<!-- Footer -->
-	<link rel="apple-touch-icon" sizes="152x152" href="apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="manifest.json">
-	<link rel="mask-icon" href="safari-pinned-tab.svg" color="#464646">
+	<link rel="apple-touch-icon" sizes="152x152" href="{{ '/apple-touch-icon.png' | prepend: site.baseurl }}">
+	<link rel="icon" type="image/png" href="{{ '/favicon-32x32.png' | prepend: site.baseurl }}" sizes="32x32">
+	<link rel="icon" type="image/png" href="{{ '/favicon-16x16.png' | prepend: site.baseurl }}" sizes="16x16">
+	<link rel="manifest" href="{{ '/manifest.json' | prepend: site.baseurl }}">
+	<link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | prepend: site.baseurl }}" color="#464646">
 	<meta name="theme-color" content="#ffffff"> 
 
 	<!-- Scripts -->
