--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -16,7 +16,7 @@ $link-hover-color: $main-color-medium;
 $selection-color: #EEEEEE;
 
 /* Header Variables */
-$heading-font: 'Poppins', sans-serif;
+$heading-font: 'futura-pt', sans-serif;
 $heading-font-color: $main-color-dark;
 $header-border-colour: $main-color-dark;
 $header-height: 100px;
