--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,6 +22,11 @@
 	<!-- Style Sheets and Fonts -->
 	<link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
 	<link rel="canonical" href="{{ page.url | replace: 'index.html', '' | prepend: site.baseurl }}">
+	
+	<!-- Typekit -->
+	<script src="https://use.typekit.net/tza7kvw.js"></script>
+	<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+	<!-- Google Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500" rel="stylesheet">
 </head>
