--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -24,8 +24,9 @@ h5,
 h6 {
 	color: $heading-font-color;
 	font-family: $heading-font;
-	font-weight: 500;
-	line-height: 1.54
+	font-weight: 400;
+	line-height: 1.54;
+	font-variant-ligatures: none;	
 }
 
 h1 {
@@ -153,66 +154,59 @@ header {
 $dot-travel-distance: 20px;
 $dot-position: -20px;
 
-.post-container > * {
-	vertical-align: middle;
-}
-
-.post-container {
-	display: block;
+.blog-post {
+	width: 800px;
+	max-width: 100%;
 	margin-bottom: 100px;
 	color: $main-color-dark;
 	text-align: left;
+	
+	/* Flex */
+	display: flex;
+	flex-wrap: wrap-reverse;
+	align-items: center;
+	justify-content: space-around;
+	
 	time {
 		color: $main-color-dark;
 	}
 	
-	.post-text-container {
-		vertical-align: middle;
-		display: inline-block;
+	.blog-post-text {
+		width: 400px;
+		max-width: 100%;
+		margin-bottom: 40px;
+	}
+
+	.blog-post-thumbnail {
 		width: 400px;
 		max-width: 100%;
 	}
 
-	.post-thumbnail-container {
-		display: inline-block;
-		text-align: center;
-		width: 400px;
+	.blog-post-thumbnail-image {
 		max-width: 100%;
-		height: 100%;
-		max-height: 100%;
+		margin-bottom: 20px;
 	}
 
-	.post-thumbnail {
-		vertical-align: middle;
-		margin: auto;
-		padding-right: 25px;
-		padding-top: 25px;
-		display: inline-block;
-	    max-width: 100%;
-		max-height: 250px;
-	}
-
-	.post-title, .post-title:visited {
+	.blog-post-title, .blog-post-title:visited {
 		position: relative;
 		line-height: 1.24;
-		padding-top: 35px;
-		color: $main-color-dark;
+		padding-right: 20px;
+		color: black;
 		font-family: $heading-font;
-		font-weight: 500;
-		font-size: 25px;
-		letter-spacing: 2px;
+		font-weight: 400;
+		font-size: 30px;
+		letter-spacing: 1.5px;
 		text-decoration: none;
 		font-variant-ligatures: none;
 	}
 
-	.post-title, .post-time {
+	.blog-post-title, .blog-post-time {
 		position: relative;
-		color: black;
 		text-align: left;
 		@include transition( all 300ms cubic-bezier(0.25, 0.1, 0.25, 1) );
 	}
 
-	.post-time {
+	.blog-post-time {
 		@extend time;
 		vertical-align: top;
 		color: $main-color-medium;
@@ -220,11 +214,11 @@ $dot-position: -20px;
 		display: inline-block;
 		margin-right: 50px;
 		margin-top: 0px;
-		line-height:1.5
+		line-height: 1.5;
 	}
 
-	.post-categories {
-		@extend .post-time;
+	.blog-post-categories {
+		@extend .blog-post-time;
 		margin-right: 0;
 		width: 230px;
 		max-width: 100%;
@@ -232,69 +226,57 @@ $dot-position: -20px;
 		word-spacing: 15px;
 	}
 
-	.post-description {
-		color: black;
+	.blog-post-description {
+		padding-right: 20px;
+		color: $main-color-dark;
 		margin-top: 20px;
 		font-weight: 400;
 		font-size: 14px;
 	}
-	/*
-	.post-dot-1 {
-		position: absolute;
-		background: $main-color-dark;
-		border-radius: 50%;
-		width: 5px;
-		height: 5px;
-		top: $dot-position - $dot-travel-distance;
-		left: $dot-position;
-		opacity: 0;
-		@include transition( all 300ms cubic-bezier(0.25, 0.1, 0.25, 1) );
-	}
-
-	.post-dot-2, .post-dot-3, .post-dot-4 {
-		@extend .post-dot-1;
-	}
-
-	.post-dot-2 {
-		top: $dot-position;
-		right: $dot-position - $dot-travel-distance;
-		left: auto;
-	}
-	
-	.post-dot-3 {
-		right: $dot-position;
-		bottom: $dot-position - $dot-travel-distance;
-		left: auto;
-		top: auto;
-	}
-	
-	.post-dot-4 {
-		left: $dot-position - $dot-travel-distance;
-		bottom: $dot-position;
-		top: auto;
-	}
-	*/
 
 	&:hover {
 		text-decoration: none;
 		color: $main-color-dark;
-		span {
-			opacity: 1;
+	}
+}
+
+.work-container {
+	display: flex;
+	flex-wrap: wrap;
+
+	.work {
+		font-family: $heading-font;
+		font-weight: 400;
+		font-size: 20px;
+
+		text-decoration: none;
+		width: 800px;
+		height: 100px;
+
+		.work-title {
+			@include transition( all 300ms cubic-bezier(0.25, 0.1, 0.25, 1) );
+			color: $main-color-dark;
+			margin-top: 22px;
 		}
-		.post-dot-1 {
-			@include transform( translate3d(0, $dot-travel-distance, 0) );
+
+		.work-time {
+			@include transition( all 300ms cubic-bezier(0.25, 0.1, 0.25, 1) );
+			color: $link-color;
+			font-size: 12px;
 		}
-		.post-dot-2 {
-			@include transform( translate3d(-$dot-travel-distance, 0, 0) );
-		}
-		.post-dot-3 {
-			@include transform( translate3d(0, -$dot-travel-distance, 0) );
-		}
-		.post-dot-4 {
-			@include transform( translate3d($dot-travel-distance, 0, 0) );
+
+		&:hover {
+			text-decoration: none;
+			
+			.work-title {
+				@include transform( translate3d( 15px, 0, 0) );
+			}
+
+			.work-time {
+				@include transform( translate3d( 15px, 0, 0) );
+			}
 		}
 	}
-
 }
 
 /* Aside */
@@ -447,14 +429,12 @@ aside {
 				.page-link {
 					@include transition( all 300ms cubic-bezier(0.250, 0.1, 0.25, 1) );
 					font-family: $heading-font;
-					font-weight: 500;
-					font-size: 16px;
 					letter-spacing: 1px;
 					line-height: $header-height;
 					display: block;
 					width: 100%;
 					height: 100%;
-					color: $main-color-dark;
+					color: black;
 					text-decoration: none;
 
 					.page-span {
@@ -497,7 +477,7 @@ aside {
 					&:hover,
 					&:active {
 						text-decoration: none;
-						color: $main;
+						color: black;
 					}
 				}
 			}
@@ -707,7 +687,7 @@ footer {
 	a:visited,
 	a:hover {
 		text-decoration: none;
-		font-weight: 300;
+		font-weight: 400;
 	}
 
 	img {
