Thesis Blog Post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer>
 	<br><br>
-	<p><a href="mailto:{{ site.email }}">elwin ha &copy; 2016</a></p>
+	<p><a href="mailto:{{ site.email }}">elwin ha &copy; {{ site.time | date: '%Y' }}</a></p>
 </footer>
