--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -8,6 +8,24 @@ body {
 	line-height: 1.8;
 }
 
+/* Scroll Bar */
+*::-webkit-scrollbar-track
+{
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+
+*::-webkit-scrollbar-thumb
+{
+	background-color: $main-color-medium;	
+}
+
+/* Selection */
 *::-moz-selection {
 	background: $selection-color;
 }
@@ -16,6 +34,7 @@ body {
 	background: $selection-color;
 }
 
+/* Headers */
 h1,
 h2,
 h3,
@@ -25,8 +44,13 @@ h6 {
 	color: $heading-font-color;
 	font-family: $heading-font;
 	font-weight: 400;
-	line-height: 1.54;
+	line-height: 1.4;
 	font-variant-ligatures: none;	
+}
+
+h4, h5, h6 {
+	margin: 5px;
+	line-height: 1.5;
 }
 
 h1 {
@@ -42,7 +66,7 @@ h1 {
 .page-title {
 	@extend h1;
 	width: 100%;
-	line-height: 1;
+	line-height: 1.5;
 	margin-bottom: 25px;
 }
 
@@ -189,7 +213,7 @@ $dot-position: -20px;
 
 	.blog-post-title, .blog-post-title:visited {
 		position: relative;
-		line-height: 1.24;
+		line-height: 1.4;
 		padding-right: 20px;
 		color: black;
 		font-family: $heading-font;
