--- a/_includes/header.html
+++ b/_includes/header.html
@@ -101,7 +101,7 @@
 		<nav id="nav-bar" class="default-nav-bar-state duration-300">
 			<ul>
 				<li>
-					<a href="{{ '/blog' | prepend: site.baseurl }}" class="page-link">blog
+					<a href="{{ '/' | prepend: site.baseurl }}" class="page-link">blog
 						<span class="page-span"></span>
 					</a>
 				</li>
