--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -156,9 +156,14 @@ video {
 
 .video-container {
 	text-align: center;
-	overflow: hidden;
 }
 
+.mockup-shadow {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	max-width: 100%;
+	margin: 1em 0;
+	display: inline-block;
+}
 
 .container {
 	width: $content-width;;
