--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -21,7 +21,7 @@ $selection-color: #EEEEEE;
 $heading-font: 'futura-pt', sans-serif;
 $heading-font-color: $main-color-dark;
 $header-border-colour: $main-color-dark;
-$header-height: 100px;
+$header-height: 150px;
 $header-list-width: 120px;
 $header-logo-size: 30px;
 $header-logo-height: 30px;
@@ -164,4 +164,16 @@ $break-small-height: 480px;
 @mixin clip-path( $args... ) {
   -webkit-clip-path: $args;
   clip-path: $args;
+}
+
+@mixin cursor-zoom-in {
+  cursor: -webkit-zoom-in;
+  cursor: -moz-zoom-in;
+  cursor: zoom-in;
+}
+
+@mixin cursor-zoom-out {
+  cursor: -webkit-zoom-out;
+  cursor: -moz-zoom-out;
+  cursor: zoom-out;
 }
